feat: improve session naming for Happy app and add GitHub MCP watchdog
Session naming: rename control plane mount from /workspace to
/control-plane, flatten session paths to /repo--name--hash format,
and rename ~/Repos to ~/Sessions for clarity.

Watchdog: add systemd timer that health-checks GitHub MCP every 30s
and auto-restarts on failure. Add restart_service MCP tool with
allowlist. Add rate limiting to github-mcp.service.

--- a/group_vars/all/vars.yml
+++ b/group_vars/all/vars.yml
@@ -28,7 +28,7 @@ node_lts_version: "22"
 tmux_session_name: "main"
 
 # Paths
-repos_dir: "{{ pi_home }}/Repos"
+sessions_dir: "{{ pi_home }}/Sessions"
 claude_docker_dir: "{{ pi_home }}/.claude-docker"
 control_plane_dir: "{{ pi_home }}/.claude-control-plane"
 mcp_server_dir: "{{ pi_home }}/tmux-control-plane"
