feat: session persistence, resource-aware spawning, and GitHub identity
Session registry persists project sessions to ~/.claude-docker/sessions.json
so they auto-restore after reboot with --continue. Resource checks block
spawning when memory < 512MB or max containers reached.

- registry.js: atomic-write session registry with reconcile/prune
- lib.js: add parseMemAvailable(), parseContainerCount()
- server.js: gate spawn on checkResources(), integrate registry into
  spawn/kill/list, add check_resources and restore_sessions tools,
  boot-time auto-restore with configurable delay
- claude-sandbox.sh: handle --resume sentinel to pass --continue
- systemd: add After=claude-tmux.service for boot ordering
- playbook: auto-detect github_owner from PAT via API, template
  control plane CLAUDE.md with owner context for short repo names
- vars.yml: add max_project_sessions, min_available_memory_mb,
  session_restore_delay config

--- a/files/systemd/tmux-control-plane.service
+++ b/files/systemd/tmux-control-plane.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=tmux-control-plane MCP server
-After=network.target
+After=network.target claude-tmux.service
 
 [Service]
 Type=simple
