feat: restrict MCP tools for project sessions via separate token
Project sessions now get a restricted bearer token (mcp_session_token)
that only exposes restart_self, restart_service, and check_resources.
Control plane keeps full access to all 10 tools via mcp_bearer_token.

The server checks which token was used and filters tools/list and
tools/call accordingly, returning "Unknown tool" for restricted calls.

--- a/group_vars/all/vars.yml
+++ b/group_vars/all/vars.yml
@@ -21,9 +21,10 @@ claude_git_email: "claude@localhost"
 mcp_server_port: 3100
 github_mcp_port: 3101
 github_mcp_image_version: "0.28.1"
-# Bearer token is set in vault.yml (vault_mcp_bearer_token)
-# Falls back to dev default if not set in vault
+# Bearer tokens — control plane gets full access, project sessions get restricted tools
+# Set in vault.yml (vault_mcp_bearer_token / vault_mcp_session_token)
 mcp_bearer_token: "{{ vault_mcp_bearer_token | default('tmux-local-dev', true) }}"
+mcp_session_token: "{{ vault_mcp_session_token | default('tmux-session-dev', true) }}"
 
 # Node.js version
 node_lts_version: "22"
